Suppression media queries SASS + btn-explorer 29/11

--- a/html/enchantee.html
+++ b/html/enchantee.html
@@ -212,7 +212,7 @@
                     </div>
                 </div>
             </article>
-            <div class="btn btn__menu">
+            <div>
                 <button class="btn-explorer">Commander</button>
             </div>
         </section>
