--- a/html/francaise.html
+++ b/html/francaise.html
@@ -198,7 +198,7 @@
                     </div>
                 </div>
             </article>
-            <div class="btn btn__menu">
+            <div>
                 <button class="btn-explorer">Commander</button>
             </div>
         </section>
