--- a/index.html
+++ b/index.html
@@ -60,13 +60,10 @@
                     </a>
                 </div>
                 <div class="functioning__container__card">
-                    <a href="#">
-                        <p class="step">
-                        <span id="step__three">3</span>
-                        <i class="fa-solid fa-store">
-                        </i>Dégustez au restaurant
-                        </p>
-                    </a>
+                    <p><a href="#">3
+                        <i class="fa-solid fa-store"></i>
+                        Dégustez au restaurant
+                    </a></p>
                 </div>
             </div>
         </nav>
