--- a/html/delice.html
+++ b/html/delice.html
@@ -196,7 +196,7 @@
                     </div>
                 </div>
             </article>
-            <div class="btn btn__menu">
+            <div>
                 <button class="btn-explorer">Commander</button>
             </div>
         </section>
