Reste fonctionnement et restaurants 29/11

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 </div>
             </div>
         </nav>
+        <h2 id="restaurants__titre">Restaurants</h2>
         <section id="restaurants"> 
-            <h2>Restaurants</h2>
                 <!--Restaurant 1 -->
                 <article class="article article__palette">
                     <span class="new">Nouveau</span>
