Chargement menus desktop 29/11

--- a/html/enchantee.html
+++ b/html/enchantee.html
@@ -107,7 +107,7 @@
                 </div>
             </article>
             <article class="menu__choice menu__choice__enchantee">
-                <div class="card__ghost card__ghost__enchantee">
+                <div class="card__ghost__enchantee">
                     <p>PLATS</p>
                 </div>
                 <div class="card__menu first card__decoration--menu">
@@ -160,7 +160,7 @@
                 </div>
             </article>
             <article class="menu__choice menu__choice__enchantee">
-                <div class="card__ghost">
+                <div class="card__ghost__enchantee">
                     <p>DESSERTS</p>
                 </div>
                 <div class="card__menu first card__decoration--menu">
@@ -213,7 +213,7 @@
                 </div>
             </article>
             <div>
-                <button class="btn-explorer">Commander</button>
+                <button class="btn-explorer btn-enchantee">Commander</button>
             </div>
         </section>
         <footer>
