--- a/html/francaise.html
+++ b/html/francaise.html
@@ -199,7 +199,7 @@
                 </div>
             </article>
             <div>
-                <button class="btn-explorer">Commander</button>
+                <button class="btn-explorer btn-order">Commander</button>
             </div>
         </section>
         <footer>
