Fin responsive functioning 30/11

--- a/index.html
+++ b/index.html
@@ -43,27 +43,30 @@
             <div class="functioning__container">
                 <div class="functioning__container__card">
                     <a href="#">
-                        <span class="step">
-                            <span id="step__one">1 </span>
+                        <p class="step">
+                            <span id="step__one">1</span>
                             <i class="fa-solid fa-mobile-button"></i>
-                            <p>Choisissez un restaurant</p>
-                        </span>
+                            Choisissez un restaurant
+                        </p>
                     </a>
                 </div>
                 <div class="functioning__container__card">
                     <a href="#">
-                        <span class="step">
-                            <span id="step__two">2 </span>
+                        <p class="step">
+                            <span id="step__two">2</span>
                             <i class="fa-solid fa-list-ul"></i>
-                            <p>Composez votre menu</p>
-                        </span>
+                            Composez votre menu
+                        </p>
                     </a>
                 </div>
                 <div class="functioning__container__card">
-                    <p><a href="#">3
-                        <i class="fa-solid fa-store"></i>
-                        Dégustez au restaurant
-                    </a></p>
+                    <a href="#">
+                        <p class="step">
+                            <span id="step__three">3</span>
+                            <i class="fa-solid fa-store"></i>
+                            Dégustez au restaurant
+                        </p>
+                    </a>
                 </div>
             </div>
         </nav>
