Réécriture page accueil sass

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h2>Fonctionnement</h2>
             <div class="functioning__container">
                 <div class="functioning__container__card">
-                    <a href="#">
+                    <a class="functioning__container__card__link" href="#">
                         <p class="step">
                             <span id="step__one">1</span>
                             <i class="fa-solid fa-mobile-button"></i>
@@ -51,7 +51,7 @@
                     </a>
                 </div>
                 <div class="functioning__container__card">
-                    <a href="#">
+                    <a class="functioning__container__card__link" href="#">
                         <p class="step">
                             <span id="step__two">2</span>
                             <i class="fa-solid fa-list-ul"></i>
@@ -60,7 +60,7 @@
                     </a>
                 </div>
                 <div class="functioning__container__card">
-                    <a href="#">
+                    <a class="functioning__container__card__link" href="#">
                         <p class="step">
                             <span id="step__three">3</span>
                             <i class="fa-solid fa-store"></i>
