Réécriture Sass, mobile-first terminé 07/12

--- a/html/delice.html
+++ b/html/delice.html
@@ -31,7 +31,7 @@
             <div class="restaurantcontainer__title">
                 <h1>Le Délice Des Sens</h1>
                 <div class="heartcontainer--menu">
-                    <i class="fa-regular fa-heart fa-heart-menu fa-2xl"></i>
+                    <i class="fa-regular fa-heart fa-heart-menu fa-xl"></i>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
                 <div class="card__ghost">
                     <p>ENTRÉES</p>
                 </div>
-                <div class="card__menu first card__decoration--menu">
+                <div class="card__menu first card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Tartare de thon</h3>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu second card__decoration--menu">
+                <div class="card__menu second card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Bouchée de homard croustillant</h3>
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu third card__decoration--menu">
+                <div class="card__menu third card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Velouté de cèpes</h3>
@@ -94,7 +94,7 @@
                 <div class="card__ghost">
                     <p>PLATS</p>
                 </div>
-                <div class="card__menu first card__decoration--menu">
+                <div class="card__menu first card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Poulet rôti aux herbes de Provence</h3>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu second card__decoration--menu">
+                <div class="card__menu second card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Langouste rôtie</h3>
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu third card__decoration--menu">
+                <div class="card__menu third card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Côte de bœuf Angus</h3>
@@ -147,7 +147,7 @@
                 <div class="card__ghost">
                     <p>DESSERTS</p>
                 </div>
-                <div class="card__menu first card__decoration--menu">
+                <div class="card__menu first card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Farandole de desserts</h3>
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu second card__decoration--menu">
+                <div class="card__menu second card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Crème brûlée</h3>
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu third card__decoration--menu">
+                <div class="card__menu third card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Tiramisù</h3>
@@ -200,7 +200,7 @@
                 <button class="btn-explorer btn-order">Commander</button>
             </div>
         </section>
-        <footer>
+        <footer class="footer">
             <ul>
                 <li class="footer__logo">ohmyfood</li>
                 <li><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
