--- a/html/francaise.html
+++ b/html/francaise.html
@@ -33,7 +33,7 @@
             <div class="restaurantcontainer__title">
                 <h1>À La Française</h1>
                 <div class="heartcontainer--menu">
-                    <i class="fa-regular fa-heart fa-heart-menu fa-2xl"></i>
+                    <i class="fa-regular fa-heart fa-heart-menu fa-xl"></i>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
                 <div class="card__ghost">
                     <p>ENTRÉES</p>
                 </div>
-                <div class="card__menu first card__decoration--menu">
+                <div class="card__menu first card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Tartare de poulpe acidulé</h3>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu second card__decoration--menu">
+                <div class="card__menu second card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Velouté de légumes d'antan</h3>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu third card__decoration--menu">
+                <div class="card__menu third card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Soupe à l'oignon</h3>
@@ -96,7 +96,7 @@
                 <div class="card__ghost">
                     <p>PLATS</p>
                 </div>
-                <div class="card__menu first card__decoration--menu">
+                <div class="card__menu first card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Coquilles Saint-Jacques</h3>
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu second card__decoration--menu">
+                <div class="card__menu second card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Magret de canard</h3>
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu third card__decoration--menu">
+                <div class="card__menu third card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Pigeonneau d’Ille-et-Vilaine</h3>
@@ -149,7 +149,7 @@
                 <div class="card__ghost">
                     <p>DESSERTS</p>
                 </div>
-                <div class="card__menu first card__decoration--menu">
+                <div class="card__menu first card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Pétales de violette glacés</h3>
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu second card__decoration--menu">
+                <div class="card__menu second card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Fondant au chocolat</h3>
@@ -181,7 +181,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu third card__decoration--menu">
+                <div class="card__menu third card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Millefeuille croustillant</h3>
@@ -202,7 +202,7 @@
                 <button class="btn-explorer btn-order">Commander</button>
             </div>
         </section>
-        <footer>
+        <footer class="footer">
             <ul>
                 <li class="footer__logo">ohmyfood</li>
                 <li><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
