--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </a>
                 </article>
         </section>
-        <footer>
+        <footer class="footer">
             <ul>
                 <li class="footer__logo">ohmyfood</li>
                 <li><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
