--- a/html/enchantee.html
+++ b/html/enchantee.html
@@ -31,7 +31,7 @@
             <div class="restaurantcontainer__title">
                 <h1>La Note Enchantée</h1>
                 <div class="heartcontainer--menu">
-                    <i class="fa-regular fa-heart fa-heart-menu fa-2xl"></i>
+                    <i class="fa-regular fa-heart fa-heart-menu fa-xl"></i>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
                 <div class="card__ghost">
                     <p>ENTRÉES</p>
                 </div>
-                <div class="card__menu first card__decoration--menu">
+                <div class="card__menu first card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Ravioles de foie gras</h3>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu second card__decoration--menu">
+                <div class="card__menu second card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Caviar osciètre</h3>
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu third card__decoration--menu">
+                <div class="card__menu third card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Homard et espuma de potiron</h3>
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu third card__decoration--menu">
+                <div class="card__menu third card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Foie gras de canard cuit entier</h3>
@@ -110,7 +110,7 @@
                 <div class="card__ghost__enchantee">
                     <p>PLATS</p>
                 </div>
-                <div class="card__menu first card__decoration--menu">
+                <div class="card__menu first card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Noix de coquilles Saint-Jacques</h3>
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu second card__decoration--menu">
+                <div class="card__menu second card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Langoustine poêlée</h3>
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu third card__decoration--menu">
+                <div class="card__menu third card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Mijoté de queue de bœuf</h3>
@@ -163,7 +163,7 @@
                 <div class="card__ghost__enchantee">
                     <p>DESSERTS</p>
                 </div>
-                <div class="card__menu first card__decoration--menu">
+                <div class="card__menu first card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Macaron noisette et chocolat</h3>
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu second card__decoration--menu">
+                <div class="card__menu second card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Baba au rhum revisité</h3>
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__menu third card__decoration--menu">
+                <div class="card__menu third card__menu--decoration">
                     <div class="menu__choice--text">
                         <div class="textone">
                             <h3 class="textone__title">Tarte au citron meringuée</h3>
@@ -213,10 +213,10 @@
                 </div>
             </article>
             <div>
-                <button class="btn-explorer btn-enchantee">Commander</button>
+                <button class="btn-explorer btn-order-enchantee">Commander</button>
             </div>
         </section>
-        <footer>
+        <footer class="footer">
             <ul>
                 <li class="footer__logo">ohmyfood</li>
                 <li><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
