--- a/html/delice.html
+++ b/html/delice.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <!-- Section -->
-        <section>
+        <section id="restaurants__menu">
             <article class="menu__choice">
                 <div class="card__ghost">
                     <p>ENTRÉES</p>
