Plus que le menu choice price à corriger 08/12

--- a/html/francaise.html
+++ b/html/francaise.html
@@ -198,10 +198,10 @@
                     </div>
                 </div>
             </article>
-            <div>
-                <button class="btn-explorer btn-order">Commander</button>
-            </div>
         </section>
+        <div id="btn-center">
+            <button class="btn-explorer btn-order">Commander</button>
+        </div>
         <footer class="footer">
             <ul>
                 <li class="footer__logo">ohmyfood</li>
