--- a/html/enchantee.html
+++ b/html/enchantee.html
@@ -212,10 +212,10 @@
                     </div>
                 </div>
             </article>
-            <div>
-                <button class="btn-explorer btn-order-enchantee">Commander</button>
-            </div>
         </section>
+        <div id="btn-center">
+            <button class="btn-explorer btn-order-enchantee">Commander</button>
+        </div>
         <footer class="footer">
             <ul>
                 <li class="footer__logo">ohmyfood</li>
