--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </div>
         <div class="exploration">
             <h1>Réservez le menu qui vous convient</h1>
-            <span>
-                <p>Découvrez des restaurants d'exception,</p>
-                <p>sélectionnés par nos soins.</p>
-            </span>
-            <button class="btn-explorer"><a href="#restaurants">Explorer nos restaurants</a></button>
+            <div>
+                <h4>Découvrez des restaurants d'exception,</h4>
+                <h4>sélectionnés par nos soins.</h4>
+            </div>
+            <button class="btn-explorer">Explorer nos restaurants</button>
         </div>
         <nav class="functioning">
             <h2>Fonctionnement</h2>
