--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
                 </div>
             </div>
         </nav>
-        <h2 id="restaurants__titre">Restaurants</h2>
-        <section id="restaurants"> 
+        <section class="restaurants__section">
+            <h2 id="restaurants__titre">Restaurants</h2>
+            <div id="restaurants">
                 <!--Restaurant 1 -->
                 <article class="article article__palette">
                     <span class="new">Nouveau</span>
                     <a href="html/palette.html">
-                        <img class="article__image" src="images/restaurants/la_palette_du_gout.jpg" alt="La Palette Du Goût" />
+                        <img class="article__image" src="images/restaurants/la_palette_du_gout.jpg"
+                            alt="La Palette Du Goût" />
                         <div class="article__container__card">
                             <div class="article__container__card--text">
                                 <h3>La Palette Du Goût</h3>
@@ -92,7 +94,8 @@
                 <article class="article article__enchantee">
                     <span class="new">Nouveau</span>
                     <a href="html/enchantee.html">
-                        <img class="article__image" src="images/restaurants/la_note_enchantee.jpg" alt="La Note Enchantée" />
+                        <img class="article__image" src="images/restaurants/la_note_enchantee.jpg"
+                            alt="La Note Enchantée" />
                         <div class="article__container__card">
                             <div class="article__container__card--text">
                                 <h3>La Note Enchantée</h3>
@@ -122,7 +125,8 @@
                 <!-- Restaurant 4 -->
                 <article class="article article__delice">
                     <a href="html/delice.html">
-                        <img class="article__image" src="images/restaurants/le_delice_des_sens.jpg" alt="Le Délice Des Sens" />
+                        <img class="article__image" src="images/restaurants/le_delice_des_sens.jpg"
+                            alt="Le Délice Des Sens" />
                         <div class="article__container__card">
                             <div class="article__container__card--text">
                                 <h3>Le Délice Des Sens</h3>
@@ -134,6 +138,7 @@
                         </div>
                     </a>
                 </article>
+            </div>
         </section>
         <footer class="footer">
             <ul>
